--- a/datausa/assets/scss/elements/_profile.scss
+++ b/datausa/assets/scss/elements/_profile.scss
@@ -448,7 +448,7 @@ body.profile, body.map, body.story {
           }
 
           .stat-text {
-            font-size: 17px;
+            font-size: 16px;
             text-align: center;
             color: #fff;
             line-height: 1.15;
