--- a/datausa/assets/scss/elements/_profile_m.scss
+++ b/datausa/assets/scss/elements/_profile_m.scss
@@ -81,11 +81,15 @@ body.profile, body.story {
       display: none;
     }
 
+    #show-bg i {
+      padding: 15px 10px;
+    }
+
     #splash {
       width: 100%;
 
       #splash-image {
-        background-attachment: scroll;
+        // background-attachment: scroll;
 
         &::after {
           background: -webkit-linear-gradient(top, rgba(0,0,0,0) 10%, rgba(20, 27, 46, 0.7) 60%, $black2 97%);
@@ -95,6 +99,19 @@ body.profile, body.story {
       .content {
         padding: $nav-height 10px 100px;
 
+        #splash-stats {
+          @include align-items(flex-end);
+          
+          .stat {
+            .stat-text {
+              font-size: 13px;
+            }
+            .stat-value {
+              font-size: 26px;
+              opacity: 1;
+            }
+          }
+        }
         .row-last {
           @include flex-direction(column);
         }
@@ -104,20 +121,24 @@ body.profile, body.story {
         .splash-icon-nav {
           width: 100%;
           margin-right: 0;
-          @include justify(center);
+          margin-top: 3vh;
+          @include justify(space-between);
 
           a {
+            width: 80px;
             padding: 0 5px;
-            margin: 0;
-          }
-          img {
-            width: 20px;
-            height: 20px;
-          }
-          span {
-            margin-top: 3px;
-            font-size: 9px;
-            line-height: 1.3;
+            margin: 10px 0;
+            
+            img {
+              width: 20px;
+              height: 20px;
+            }
+            span {
+              margin-top: 3px;
+              font-size: 8px;
+              line-height: 1.3;
+              @include wordwrap();
+            }
           }
         }
       }
